Minimal Mapbox Martini RTIN terrain example with free Google satellite, OSM, CartoDB Positron basemap tiles

--- a/cesium-martini/index.html
+++ b/cesium-martini/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Vite Cesium Example</title>
+    <title>Martini RTIN Terrain in Cesium</title>
     <script type="module" src="./main.ts" type="text/javascript"></script>
+    <style>
+      html,
+      body,
+      #cesium-container {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="cesium-container"></div>
   </body>
 </html>
