Better CSS normalization & add initial camera positions to mapterhorn example

--- a/mapterhorn/index.html
+++ b/mapterhorn/index.html
@@ -32,8 +32,10 @@
       const map = new maplibregl.Map({
         container: "map",
         hash: "map",
-        // 11.7/46.4768/8.0587/-18.6/60
-        // 11.7/22.30873/114.20734/-18.6/60
+        // MapLibre GL JS camera position: zoom/lat/lon/bearing/pitch
+        // Mapterhorn example camera init: 11.7/46.4768/8.0587/-18.6/60
+        // HK Kai Tak camera init: 11.7/22.30873/114.20734/-18.6/60
+        // NL Amsterdam camera init: 11.7/52.38528/4.902892/-147.5/60
         zoom: 11.7,
         center: [114.20734, 22.30873],
         pitch: 60,
