--- a/cesiumjs-no-token/index.html
+++ b/cesiumjs-no-token/index.html
@@ -8,26 +8,49 @@
       href="https://cesium.com/downloads/cesiumjs/releases/1.135/Build/Cesium/Widgets/widgets.css"
       rel="stylesheet"
     />
+    <style>
+      *,
+      *::before,
+      *::after {
+        box-sizing: border-box;
+      }
+
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+      }
+
+      body {
+        line-height: 1.5;
+        -webkit-font-smoothing: antialiased;
+      }
+
+      img,
+      picture,
+      video,
+      canvas,
+      svg {
+        display: block;
+        max-width: 100%;
+      }
+
+      input,
+      button,
+      textarea,
+      select {
+        font: inherit;
+      }
+
+      #cesium-container {
+        height: 100%;
+      }
+    </style>
   </head>
 
-  <style>
-    .app .data .map {
-      position: relative;
-    }
-    html,
-    body,
-    #cesiumContainer,
-    .leaflet-container {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      margin: 0;
-      padding: 0;
-    }
-  </style>
-
   <body>
-    <div id="cesiumContainer"></div>
+    <div id="cesium-container"></div>
     <script src="script.js" type="module"></script>
   </body>
 </html>
